<package>
  <name>mesh_visualization</name>
  <version>1.0.0</version>
  <description>mesh_visualization</description>
  <maintainer email="kartikmohta@users.noreply.github.com">Kartik Mohta</maintainer>

  <license>BSD</license>

  <url type="website">http://ros.org/wiki/mesh_visualization</url>
  <!-- <url type="bugtracker"></url> -->

  <author>Kartik Mohta</author>

  <!-- Dependencies which this package needs to build itself. -->
  <buildtool_depend>catkin</buildtool_depend>

  <!-- Dependencies needed to compile this package. -->
  <build_depend>roscpp</build_depend>
  <build_depend>nav_msgs</build_depend>
  <build_depend>visualization_msgs</build_depend>

  <!-- Dependencies needed after this package is compiled. -->
  <run_depend>roscpp</run_depend>
  <run_depend>nav_msgs</run_depend>
  <run_depend>visualization_msgs</run_depend>

  <!-- Dependencies needed only for running tests. -->
  <!-- <test_depend>roscpp</test_depend> -->
  <!-- <test_depend>nav_msgs</test_depend> -->
  <!-- <test_depend>visualization_msgs</test_depend> -->

</package>