<package format="2">
  <name>mesh_visualization</name>
  <version>1.0.0</version>
  <description>mesh_visualization</description>

  <maintainer email="kartikmohta@gmail.com">Kartik Mohta</maintainer>
  <maintainer email="michael.f.watterson@gmail.com">Michael Watterson</maintainer>

  <license>BSD</license>

  <author>Kartik Mohta</author>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>roscpp</depend>
  <depend>geometry_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>topic_tools</depend>
  <depend>visualization_msgs</depend>

</package>
