<package format="2">
  <name>pid_control</name>
  <version>1.0.0</version>
  <description>pid_control</description>
  <maintainer email="kartikmohta@gmail.com">Kartik Mohta</maintainer>
  <maintainer email="michael.f.watterson@gmail.com">Michael Watterson</maintainer>

  <license>BSD</license>

  <author>Kartik Mohta</author>

  <!-- Dependencies which this package needs to build itself. -->
  <buildtool_depend>catkin</buildtool_depend>

  <!-- Dependencies needed to compile this package. -->
  <depend>roscpp</depend>
  <depend>nav_msgs</depend>
  <depend>quadrotor_msgs</depend>
  <depend>std_msgs</depend>
  <depend>nodelet</depend>
  <depend>tf</depend>

<export>
    <nodelet plugin="${prefix}/nodelet_plugin.xml"/>
</export>

</package>
