<package format="2">
  <name>qc_serial_interface</name>
  <version>1.0.0</version>
  <description>qc_serial_interface
     GPL license since asio_serial_device is under GPL and we link to it.</description>
  <maintainer email="kartikmohta@gmail.com">Kartik Mohta</maintainer>
  <maintainer email="michael.f.watterson@gmail.com">Michael Watterson</maintainer>

  <license>GPL</license>

  <author>Kartik Mohta</author>

  <!-- Dependencies which this package needs to build itself. -->
  <buildtool_depend>catkin</buildtool_depend>

  <!-- Dependencies needed to compile this package. -->
  <depend>roscpp</depend>
  <depend>quadrotor_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>nodelet</depend>

<export>
    <nodelet plugin="${prefix}/nodelet_plugin.xml"/>
</export>

</package>
