<package format="2">
  <name>quad_encode_msg</name>
  <version>1.0.0</version>
  <description>quad_encode_msg</description>
  <maintainer email="kartikmohta@gmail.com">Kartik Mohta</maintainer>
  <maintainer email="michael.f.watterson@gmail.com">Michael Watterson</maintainer>
  <maintainer email="justinthomas@jtwebs.net">Justin Thomas</maintainer>

  <license>BSD</license>

  <author>Kartik Mohta</author>

  <!-- Dependencies which this package needs to build itself. -->
  <buildtool_depend>catkin</buildtool_depend>

  <!-- Dependencies needed to compile this package. -->
  <depend>roscpp</depend>
  <depend>quadrotor_msgs</depend>
  <depend>nodelet</depend>

<export>
    <nodelet plugin="${prefix}/nodelet_plugin.xml"/>
</export>

</package>
